--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ mypy_path = "django_ca_cmc:demo"
 plugins = ["mypy_django_plugin.main"]
 
 [tool.pytest.ini_options]
-#DJANGO_SETTINGS_MODULE = "tests.settings"
+DJANGO_SETTINGS_MODULE = "tests.settings"
 addopts = [
     "--cov",
     "--cov-report=html:coverage/",
@@ -46,6 +46,7 @@ addopts = [
 ]
 pythonpath = [
     "demo",
+    ".",
 ]
 
 [tool.ruff]
