--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,46 @@
+[build-system]
+# Minimum requirements for the build system to execute (PEP-518):
+# >= 68.1: "Promote pyproject.toml’s [tool.setuptools] out of beta." in the ChangeLog
+requires = ["setuptools>=68.1", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "django-ca-cmc"
+authors = [
+    {name = "Mathias Ertl", email = "mati@er.tl"},
+]
 version = "0.1.0"
 description = "django-ca plugin for Certificate Management over CMS (CMC)"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Framework :: Django :: 4.2",
+    "Framework :: Django :: 5.1",
+    "Framework :: Django",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Security :: Cryptography",
+    "Topic :: Security",
+    "Typing :: Typed",
+]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "django-ca>=2.1.1",
     "python-cmc>=1.22",
 ]
+
+[project.urls]
+Homepage = "https://github.com/mathiasertl/django-ca-cmc/"
+#Documentation = ""
+Source = "https://github.com/mathiasertl/django-ca-cmc/"
+Issues = "https://github.com/mathiasertl/django-ca-cmc/issues"
+#Changelog = ""
 
 [dependency-groups]
 dev = [
@@ -19,6 +52,7 @@ dev = [
     "ruff>=0.9.2",
     "coverage[toml]>=7.6.10",
     "pytest-cov>=6.0.0",
+    "build>=1.2.2.post1",
 ]
 
 [tool.coverage.run]
@@ -72,3 +106,6 @@ ignore = [
     "D203",
     "D212",
 ]
+
+[tool.setuptools.packages.find]
+include = ["django_ca_cmc*"]
