--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ requires-python = ">=3.11"
 dependencies = [
     "django-ca>=2.1.1",
     "python-cmc>=1.22",
+    "tabulate>=0.9.0",
 ]
 
 [project.urls]
