--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ dev = [
     "coverage[toml]>=7.6.10",
     "pytest-cov>=6.0.0",
     "build>=1.2.2.post1",
+    "types-tabulate>=0.9.0.20241207",
 ]
 
 [tool.coverage.run]
