--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
     "pytest-cov>=6.0.0",
     "build>=1.2.2.post1",
     "types-tabulate>=0.9.0.20241207",
+    "twine>=6.1.0",
 ]
 
 [tool.coverage.run]
