--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,11 @@ env:
 jobs:
   run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        python-version: [ "3.11", "3.12", "3.13" ]
+    name: Python ${{ matrix.python-version }}
     steps:
 
       - name: Acquire sources
@@ -17,7 +22,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.0.0
         with:
-          python-version: "3.13"
+          python-version: ${{ matrix.python-version }}
           architecture: x64
 
       - name: Install uv
@@ -25,6 +30,7 @@ jobs:
         with:
           enable-cache: true
           version: "0.6.0"
+          python-version: ${{ matrix.python-version }}
 
       - name: uv sync
         run: uv sync
