--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
     "build>=1.2.2.post1",
     "types-tabulate>=0.9.0.20241207",
     "twine>=6.1.0",
+    "freezegun>=1.5.1",
 ]
 
 [tool.coverage.run]
