--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ branch = true
 [tool.django-stubs]
 django_settings_module = "demo.settings"
 
+[tool.ruff.lint.pylint]
+max-args = 10
+
 [tool.mypy]
 strict = true
 show_error_codes = true
